fix color invisible list prescription

--- a/prescription-helper/src/app/tab1/tab1.page.scss
+++ b/prescription-helper/src/app/tab1/tab1.page.scss
@@ -23,16 +23,22 @@
     padding: 10px;
 }
 
+.color-black {
+    color: black;
+}
+
+.color-white {
+    color: white;
+}
+
 .prescription-name {
     margin-top: 10px;
     font-size: 18px;
     font-weight: bold;
-    color: black;
 }
 
 .prescription-date, .prescription-comments {
     font-weight: bold;
-    color: black;
     font-size: 14;
 }
 .dropdown {
